--- a/e/index.html
+++ b/e/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 
 
-    <title>KashKoding</title>
+    <title>KashKoder</title>
 </head>
 <body>
 
@@ -34,12 +34,13 @@
            <div class="nav-links" id="navLinks">
                <i class="fa fa-times" onclick="hideMenu()"></i>
              <ul>
-                 <li><a href="index.html">HOME</a></li>
-                 <li><a href="about.html">ABOUT</a></li>
-                 <li><a href="courses.html">COURSES</a></li>
-                 <li><a href="services.html">SERVICES</a></li>
-                 <li><a href="contact.html">CONTACT</a></li>
+                 <li><a href="">HOME</a></li>
+                 <li><a href="">ABOUT</a></li>
+                 <li><a href="">COURSES</a></li>
+                 <li><a href="">SERVICES</a></li>
+                 <li><a href="">CONTACT</a></li>
              </ul>
+
            </div>
            <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
@@ -66,37 +67,50 @@
 
 
     </section>
+<!-- home section ends -->
+    <!---<section class="header">
+        <nav>
+           <a href="index.html"><img src="images/KashLogo.png" alt=""></a>
+           <div class="nav-links" id="navLinks">
+               <i class="fa fa-times" onclick="hideMenu()"></i>
+             <ul>
+                 <li><a href="">HOME</a></li>
+                 <li><a href="">ABOUT</a></li>
+                 <li><a href="">COURSES</a></li>
+                 <li><a href="">SERVICES</a></li>
+                 <li><a href="">CONTACT</a></li>
+             </ul>
+
+           </div>
+           <i class="fa fa-bars" onclick="showMenu()"></i>
+        </nav>
+
+  
+ <div class="text-box">
+   <h1>Kashmir's First Online Coding EdTEch</h1>
+   <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore pariatur neque quam similique aut quia corrupti asperiores, porro adipisci cumque animi voluptatibus nobis eos corporis veniam! Enim quidem accusamus sed nulla eum eaque adipisci!</h3>
+   <a href="" class="hero-btn">Visit Us To Know More</a>
+   <h1>web design & development services</h1>
+   <h3>you have a vision. we have a team to get you there</h3>
+   <a href="" class="hero-btn" >Get started</a>
+ 
+ </div>       
+
+
+
+    </section>--->
+
     <hr class="hrr">
 <!------Call to Action---->
 
 <section class="cta">
        <h1>Enroll for Our various courses <br> from anywhere in Kashmir.</h1>
-       <a href="registration.html" class="hero-btn">Enroll NOW</a>
+       <a href="" class="hero-btn">Enroll NOW</a>
 
 
 
 </section>
 <hr class="hrr">
-<!-- about section starts  -->
-
-<section class="about" id="about">
-
-    <div class="image">
-        <img src="images/about.svg" alt="">
-    </div>
-
-    <div class="content">
-        <h3>why choose us?</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam aperiam quaerat dolor voluptas nobis voluptates illum? Inventore voluptas dolore voluptates.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex delectus ducimus dignissimos pariatur. Amet sed distinctio earum dolorum nulla, in obcaecati aliquid modi quos magni ducimus culpa nobis laudantium incidunt.</p>
-        <a href="#"><button class="book">learn more</button></a>
-    </div>
-
-</section>
-
-<!-- about section ends -->
-<hr class="hrr">
-
 <!-- service section starts  -->
 
 <section id="service" class="service">
@@ -201,28 +215,10 @@
             </div>
             <a href="#" class="title">learn front end development</a>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, beatae. Modi quos excepturi id quibusdam? Molestiae quis nihil non debitis!</p>
-            <div>
-                <a href="registration.html" class="hero-btn book">Book a Free Class</a><br>
-            </div>
-            
-        </div>
-    </div>
-
-    <div class="box">
-        <img src="images/357.jpg" alt="">
-        <h3 class="price">$50</h3>
-        <div class="content">
-            <div class="stars">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half"></i>
-            </div>
-            <a href="#" class="title">learn front end development</a>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, beatae. Modi quos excepturi id quibusdam? Molestiae quis nihil non debitis!</p>
-            <div>
-                <a href="registration.html" class="hero-btn book">Book a Free Class</a><br>
+            <div class="info">
+                <h3> <i class="far fa-clock"></i> 2 hours </h3>
+                <h3> <i class="far fa-calendar-alt"></i> 6 months </h3>
+                <h3> <i class="fas fa-book"></i> 12 modules </h3>
             </div>
         </div>
     </div>
@@ -240,8 +236,10 @@
             </div>
             <a href="#" class="title">learn front end development</a>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, beatae. Modi quos excepturi id quibusdam? Molestiae quis nihil non debitis!</p>
-            <div>
-                <a href="registration.html" class="hero-btn book">Book a Free Class</a><br>
+            <div class="info">
+                <h3> <i class="far fa-clock"></i> 2 hours </h3>
+                <h3> <i class="far fa-calendar-alt"></i> 6 months </h3>
+                <h3> <i class="fas fa-book"></i> 12 modules </h3>
             </div>
         </div>
     </div>
@@ -259,8 +257,10 @@
             </div>
             <a href="#" class="title">learn front end development</a>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, beatae. Modi quos excepturi id quibusdam? Molestiae quis nihil non debitis!</p>
-            <div>
-                <a href="registration.html" class="hero-btn book">Book a Free Class</a><br>
+            <div class="info">
+                <h3> <i class="far fa-clock"></i> 2 hours </h3>
+                <h3> <i class="far fa-calendar-alt"></i> 6 months </h3>
+                <h3> <i class="fas fa-book"></i> 12 modules </h3>
             </div>
         </div>
     </div>
@@ -278,8 +278,10 @@
             </div>
             <a href="#" class="title">learn front end development</a>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, beatae. Modi quos excepturi id quibusdam? Molestiae quis nihil non debitis!</p>
-            <div>
-                <a href="registration.html" class="hero-btn book">Book a Free Class</a><br>
+            <div class="info">
+                <h3> <i class="far fa-clock"></i> 2 hours </h3>
+                <h3> <i class="far fa-calendar-alt"></i> 6 months </h3>
+                <h3> <i class="fas fa-book"></i> 12 modules </h3>
             </div>
         </div>
     </div>
@@ -297,8 +299,31 @@
             </div>
             <a href="#" class="title">learn front end development</a>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, beatae. Modi quos excepturi id quibusdam? Molestiae quis nihil non debitis!</p>
-            <div>
-                <a href="registration.html" class="hero-btn book">Book a Free Class</a><br>
+            <div class="info">
+                <h3> <i class="far fa-clock"></i> 2 hours </h3>
+                <h3> <i class="far fa-calendar-alt"></i> 6 months </h3>
+                <h3> <i class="fas fa-book"></i> 12 modules </h3>
+            </div>
+        </div>
+    </div>
+
+    <div class="box">
+        <img src="images/357.jpg" alt="">
+        <h3 class="price">$50</h3>
+        <div class="content">
+            <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half"></i>
+            </div>
+            <a href="#" class="title">learn front end development</a>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, beatae. Modi quos excepturi id quibusdam? Molestiae quis nihil non debitis!</p>
+            <div class="info">
+                <h3> <i class="far fa-clock"></i> 2 hours </h3>
+                <h3> <i class="far fa-calendar-alt"></i> 6 months </h3>
+                <h3> <i class="fas fa-book"></i> 12 modules </h3>
             </div>
         </div>
     </div>
