--- a/school - Copy/courses.html
+++ b/school - Copy/courses.html
@@ -40,6 +40,7 @@
                  <li><a href="services.html">SERVICES</a></li>
                  <li><a href="contact.html">CONTACT</a></li>
              </ul>
+
            </div>
            <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
@@ -51,140 +52,20 @@
 
 <!-- header2 section starts  -->
 
-<section class="header" id="header">
+<section class="sub-header" id="sub-header">
 
-    <div class="text-box">
-   <h1>Kashmir's First Online Coding EdTEch</h1>
-   <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore pariatur neque quam similique aut quia corrupti asperiores, porro adipisci cumque animi voluptatibus nobis eos corporis veniam! Enim quidem accusamus sed nulla eum eaque adipisci!</h3>
-   <a href="" class="hero-btn">Visit Us To Know More</a>
-   <h1>web design & development services</h1>
-   <h3>you have a vision. we have a team to get you there</h3>
-   <a href="" class="hero-btn" >Get started</a>
- 
- </div>       
+    <h1>COURSES</h1>     
 
 
 
     </section>
-    <hr class="hrr">
-<!------Call to Action---->
-
-<section class="cta">
-       <h1>Enroll for Our various courses <br> from anywhere in Kashmir.</h1>
-       <a href="registration.html" class="hero-btn">Enroll NOW</a>
-
-
-
-</section>
 <hr class="hrr">
-<!-- about section starts  -->
-
-<section class="about" id="about">
-
-    <div class="image">
-        <img src="images/about.svg" alt="">
-    </div>
-
-    <div class="content">
-        <h3>why choose us?</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam aperiam quaerat dolor voluptas nobis voluptates illum? Inventore voluptas dolore voluptates.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex delectus ducimus dignissimos pariatur. Amet sed distinctio earum dolorum nulla, in obcaecati aliquid modi quos magni ducimus culpa nobis laudantium incidunt.</p>
-        <a href="#"><button class="book">learn more</button></a>
-    </div>
-
-</section>
-
-<!-- about section ends -->
-<hr class="hrr">
-
-<!-- service section starts  -->
-
-<section id="service" class="service">
-
-<h1 class="heading">our services</h1>
-
-<div class="row">
-
-  <div class="image">
-    <img src="images/webs.svg" alt="">
-  </div>
-  <div class="content">
-    <h3>Website Development</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde voluptatem, tempore hic deserunt vel temporibus aperiam recusandae ratione, obcaecati at qui accusamus enim, laudantium eveniet. Inventore voluptas nemo placeat. Voluptas.</p>
-    <a href="#"><button class="btn">read more</button></a>
-  </div>
-
-</div>
-
-<div class="row">
-
-  <div class="content">
-    <h3>Mobile Freindly</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde voluptatem, tempore hic deserunt vel temporibus aperiam recusandae ratione, obcaecati at qui accusamus enim, laudantium eveniet. Inventore voluptas nemo placeat. Voluptas.</p>
-    <a href="#"><button class="btn">read more</button></a>
-  </div>
-  <div class="image">
-    <img src="images/mobilef.svg" alt="">
-  </div>
-
-</div>
-
-<div class="row">
-
-  
-  <div class="image">
-    <img src="images/respon.svg" alt="">
-  </div>
-  <div class="content">
-    <h3>Responsive Design</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde voluptatem, tempore hic deserunt vel temporibus aperiam recusandae ratione, obcaecati at qui accusamus enim, laudantium eveniet. Inventore voluptas nemo placeat. Voluptas.</p>
-    <a href="#"><button class="btn">read more</button></a>
-  </div>
-
-</div>
-
-<div class="row">
-
-  <div class="content">
-    <h3>Online Teaching</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde voluptatem, tempore hic deserunt vel temporibus aperiam recusandae ratione, obcaecati at qui accusamus enim, laudantium eveniet. Inventore voluptas nemo placeat. Voluptas.</p>
-    <a href="#"><button class="btn">read more</button></a>
-  </div>
-  <div class="image">
-    <img src="images/online.svg" alt="">
-  </div>
-
-</div>
-
-<div class="row">
-
-  
-  <div class="image">
-    <img src="images/certif.svg" alt="">
-  </div>
-  <div class="content">
-    <h3>Course Certification</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde voluptatem, tempore hic deserunt vel temporibus aperiam recusandae ratione, obcaecati at qui accusamus enim, laudantium eveniet. Inventore voluptas nemo placeat. Voluptas.</p>
-    <a href="#"><button class="btn">read more</button></a>
-  </div>
-
-</div>
-
-
-</section>
-
-<hr class="hrr">
-   
-<!-- service section ends -->
-
-
 <!---Courses----->
 
 
 
 <section class="course" id="course">
 
-<h1 class="heading">Courses</h1>    
 
 <div class="box-container">
 
@@ -202,7 +83,7 @@
             <a href="#" class="title">learn front end development</a>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, beatae. Modi quos excepturi id quibusdam? Molestiae quis nihil non debitis!</p>
             <div>
-                <a href="registration.html" class="hero-btn book">Book a Free Class</a><br>
+                <a href="" class="hero-btn book">Book a Free Class</a><br>
             </div>
             
         </div>
@@ -222,7 +103,7 @@
             <a href="#" class="title">learn front end development</a>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, beatae. Modi quos excepturi id quibusdam? Molestiae quis nihil non debitis!</p>
             <div>
-                <a href="registration.html" class="hero-btn book">Book a Free Class</a><br>
+                <a href="" class="hero-btn book">Book a Free Class</a><br>
             </div>
         </div>
     </div>
@@ -241,7 +122,7 @@
             <a href="#" class="title">learn front end development</a>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, beatae. Modi quos excepturi id quibusdam? Molestiae quis nihil non debitis!</p>
             <div>
-                <a href="registration.html" class="hero-btn book">Book a Free Class</a><br>
+                <a href="" class="hero-btn book">Book a Free Class</a><br>
             </div>
         </div>
     </div>
@@ -260,7 +141,7 @@
             <a href="#" class="title">learn front end development</a>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, beatae. Modi quos excepturi id quibusdam? Molestiae quis nihil non debitis!</p>
             <div>
-                <a href="registration.html" class="hero-btn book">Book a Free Class</a><br>
+                <a href="" class="hero-btn book">Book a Free Class</a><br>
             </div>
         </div>
     </div>
@@ -279,7 +160,7 @@
             <a href="#" class="title">learn front end development</a>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, beatae. Modi quos excepturi id quibusdam? Molestiae quis nihil non debitis!</p>
             <div>
-                <a href="registration.html" class="hero-btn book">Book a Free Class</a><br>
+                <a href="" class="hero-btn book">Book a Free Class</a><br>
             </div>
         </div>
     </div>
@@ -298,7 +179,7 @@
             <a href="#" class="title">learn front end development</a>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, beatae. Modi quos excepturi id quibusdam? Molestiae quis nihil non debitis!</p>
             <div>
-                <a href="registration.html" class="hero-btn book">Book a Free Class</a><br>
+                <a href="" class="hero-btn book">Book a Free Class</a><br>
             </div>
         </div>
     </div>
@@ -307,46 +188,6 @@
 
 </section>
  <hr class="hrr">
-
-<!------testimonials----->
-
-<section class="testimonials">
-
-    <h1 class="heading">CEO Message's</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    
-    <div class="row">
-       <div class="testimonials-col">
-           <img src="images/adfar.jpg" alt="">
-           <div>
-               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-               <h3>Adfar RAsheed</h3>
-               <i class="fa fa-star"></i>
-               <i class="fa fa-star"></i>
-               <i class="fa fa-star"></i>
-               <i class="fa fa-star"></i>
-               <i class="fa fa-star-o"></i>
-           </div>
-       </div>
-       <div class="testimonials-col">
-           <img src="images/user2.jpg" alt="">
-           <div>
-               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-               <h3>Mohammad Idrees</h3>
-               <i class="fa fa-star"></i>
-               <i class="fa fa-star"></i>
-               <i class="fa fa-star"></i>
-               <i class="fa fa-star"></i>
-               <i class="fa fa-star-half-o"></i>
-           </div>
-       </div>
-
-    </div>
-
-
-</section>
-
-<hr class="hrr">
 
 <!-- contact section starts  -->
 
