--- a/school - Copy/courses.html
+++ b/school - Copy/courses.html
@@ -83,7 +83,7 @@
             <a href="#" class="title">learn front end development</a>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, beatae. Modi quos excepturi id quibusdam? Molestiae quis nihil non debitis!</p>
             <div>
-                <a href="" class="hero-btn book">Book a Free Class</a><br>
+                <a href="registration.html" class="hero-btn book">Book a Free Class</a><br>
             </div>
             
         </div>
@@ -103,7 +103,7 @@
             <a href="#" class="title">learn front end development</a>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, beatae. Modi quos excepturi id quibusdam? Molestiae quis nihil non debitis!</p>
             <div>
-                <a href="" class="hero-btn book">Book a Free Class</a><br>
+                <a href="registration.html" class="hero-btn book">Book a Free Class</a><br>
             </div>
         </div>
     </div>
@@ -122,7 +122,7 @@
             <a href="#" class="title">learn front end development</a>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, beatae. Modi quos excepturi id quibusdam? Molestiae quis nihil non debitis!</p>
             <div>
-                <a href="" class="hero-btn book">Book a Free Class</a><br>
+                <a href="registration.html" class="hero-btn book">Book a Free Class</a><br>
             </div>
         </div>
     </div>
@@ -141,7 +141,7 @@
             <a href="#" class="title">learn front end development</a>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, beatae. Modi quos excepturi id quibusdam? Molestiae quis nihil non debitis!</p>
             <div>
-                <a href="" class="hero-btn book">Book a Free Class</a><br>
+                <a href="registration.html" class="hero-btn book">Book a Free Class</a><br>
             </div>
         </div>
     </div>
@@ -160,7 +160,7 @@
             <a href="#" class="title">learn front end development</a>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, beatae. Modi quos excepturi id quibusdam? Molestiae quis nihil non debitis!</p>
             <div>
-                <a href="" class="hero-btn book">Book a Free Class</a><br>
+                <a href="registration.html" class="hero-btn book">Book a Free Class</a><br>
             </div>
         </div>
     </div>
@@ -179,7 +179,7 @@
             <a href="#" class="title">learn front end development</a>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, beatae. Modi quos excepturi id quibusdam? Molestiae quis nihil non debitis!</p>
             <div>
-                <a href="" class="hero-btn book">Book a Free Class</a><br>
+                <a href="registration.html" class="hero-btn book">Book a Free Class</a><br>
             </div>
         </div>
     </div>
