--- a/asli/index.html
+++ b/asli/index.html
@@ -111,7 +111,7 @@
 <div class="row">
 
   <div class="image">
-    <img src="images/web.svg" alt="">
+    <img src="images/Web.svg" alt="">
   </div>
   <div class="content">
     <h3>Website Development</h3>
