--- a/asli/contact.html
+++ b/asli/contact.html
@@ -55,7 +55,7 @@
 
 <section class="contact" id="contact">
 
-<h1 class="heading">contact us</h1>
+<h1 class="heading">Drop us a line</h1>
 
 <div class="row">
 
