--- a/asli/index.html
+++ b/asli/index.html
@@ -106,7 +106,7 @@
 
 <section id="service" class="service">
 
-<h1 class="heading">our services</h1>
+<h1 class="heading">Our Services</h1>
 
 <div class="row">
 
@@ -167,8 +167,8 @@
 				</div>
 			</div>
 			<div class="info">
-				<p>Equip yourself with the skills of front end development with the assistance of our experienced teachnical staff. Front-end web development is the development of the graphical user interface of a website, through the use of HTML, CSS, and JavaScript, so that users can view and interact with that website. Also known as client-side development is the practice of producing a website or Web Application so that a user can see and interact with them directly. </p>
-				<a href="Scratch.html" class="hero-btn">Kar Bismillah</a>
+				<p>Equip yourself with the skills of front end development with the assistance of our experienced teachnical staff. Front-end web development is the develop- ment of the graphical user interface of a website, through the use of HTML, CSS, and JavaScript, so that users can view and interact with that website. Also known as client-side development is the practice of producing a website or Web Application so that a user can see and interact with them directly. </p>
+				<a href="registration.php" class="hero-btn">Kar Bismillah</a>
 			</div>
 		</div><!--service-card-->
 
@@ -183,15 +183,15 @@
 				</div>
 			</div>
 			<div class="info">
-				<p></p>
-				<a href="thunkable.html" class="hero-btn">Kar Bismillah</a>
+				<p>Equip yourself with the skills of back end development with the assistance of our experienced teachnical staff. Backend Development is also known as server-side development. It is everything that the users don’t see and contains behind-the-scenes activities that occur when performing any action on a website. It focuses primarily on databases, backend logic, APIs, and Servers. A backend developer is one who develops the products for the backend of any website.</p>
+				<a href="registration.php" class="hero-btn">Kar Bismillah</a>
 			</div>
 		</div><!--service-card-->
 
 		<div class="service-card bg-dark">
 			<div class="d-flex">
 				<div class="icon">
-					<img width="160" height="150" class="icon" alt="" src="images/cpro.png">
+					<img width="160" height="150" class="icon" alt="" src="images/c.png">
 				
 				</div>
 				<div class="heading">
@@ -199,23 +199,23 @@
 				</div>
 			</div>
 			<div class="info">
-				<p>Teaching your kids how to code is highly essential nowadays. Skills like HTML and CSS are the foundation of the web, which means introducing your kids to these languages early, they would find learning other advanced programming languages like JavaScript, PHP, and Ruby a whole lot easier. And when your children are fully grown and have become adults, they would find many job opportunities in the market waiting to be filled.</p>
-				<a href="html.html" class="hero-btn">Kar Bismillah</a>
+				<p>Equip yourself with the skillset of C with the assistance of our experienced teachnical staff. C is a general-purpose, procedural computer programming language. It's widespread use and basic nature makes it an ideal choice to start learning programming from. C basically provides constructs that map efficiently to typical machine instructions. Which means it can be efficiently used in systems where applications are coded in assembly language.</p>
+				<a href="registration.php" class="hero-btn">Kar Bismillah</a>
 			</div>
 		</div><!--service-card-->
 
 		<div class="service-card bg-dark">
 			<div class="d-flex">
 				<div class="icon">
-					<img width="160" height="150" class="icon" alt="" src="images/javascript.svg">
+					<img width="160" height="150" class="icon" alt="" src="images/javascript.jpg">
 				</div>
 				<div class="heading">
-					<h5>Programming Language</h5>
+					<h5>JavaScript <h3>Beginner-Intermediate</h3></h5>
 				</div>
 			</div>
 			<div class="info">
-				<p>JavaScript is one of many great coding languages for kids used to communicate instructions to a computer.JavaScript is one of the main languages of the modern internet. While it is best known for its use in web design, working alongside HTML/CSS to create powerful web experiences, it is also commonly used in developing popular web/mobile applications, developing server applications and even video games. </p>
-				<a href="javascript.html" class="hero-btn">Kar Bismillah</a>
+				<p>Equip yourself with the skillset of JavaScript with the assistance of our experienced teachnical staff. JavaScript is one of many great coding languages for students used to communicate instructions to a computer.JavaScript is one of the main languages of the modern internet. it is best known for its use in web design, working alongside HTML/CSS to create powerful web experiences.</p>
+				<a href="registration.php" class="hero-btn">Kar Bismillah</a>
 			</div>
 		</div><!--service-card-->
 
@@ -225,63 +225,32 @@
 					<img width="160" height="150" class="icon" alt="" src="images/Python.png">
 				</div>
 				<div class="heading">
-					<h5>Programming Language</h5>
+					<h5>Python <h3>Beginner-Intermediate</h3></h5>
 				</div>
 			</div>
 			<div class="info">
-				<p>Python is a programming language that reads like normal speech. Python is easy to learn. The commands and syntax (rules for how code must be laid out) in Python are relatively simple compared to some other programming languages. This makes our Python program for kids easy to get started — even with no experience coding. New programmers can go right from the very first simple “Hello world” programs to creating games with the Pygame toolkit.</p>
-				<a href="python.html" class="hero-btn">Kar Bismillah</a>
+				<p>Equip yourself with the skillset of Python with the assistance of our experienced teachnical staff. Python is a programming language that reads like normal speech. Python is easy to learn. The commands and syntax in Python are relatively simple compared to some other programming languages. This makes our Python program for kids easy to get started even with no experience coding.Python is fun.</p>
+				<a href="registration.php" class="hero-btn">Kar Bismillah</a>
 			</div>
 		</div><!--service-card-->
 
 		<div class="service-card bg-dark">
 			<div class="d-flex">
 				<div class="icon">
-					<img width="160" height="150" class="icon" alt="" src="images/tinkercad.png">
+					<img width="160" height="150" class="icon" alt="" src="images/ardu.png">
 				</div>
 				<div class="heading">
-					<h5>3D Modelling</h5>
+					<h5>Arduino <h3>Beginner-Intermediate</h3></h5>
 				</div>
 			</div>
 			<div class="info">
-				<p>Tinkercad is a free and safe website where your children can make things in 3D, play with virtual electronics, and create designs using blocks of code. Getting your children up and running and making things in 3D is quick and simple, and can be accomplished in a matter of minutes. Its too easy! And too user-friendly, making every other CAD or 3D program seem absolutely bewildering and clunky.</p>
-				<a href="tinker.html" class="hero-btn">Kar Bismillah</a>
+				<p>Equip yourself with circuit prototyping skills with our highly skilled instructors. Arduino is an open-source hardware and software company, project and user community that designs and manufactures single-board microcontrollers and microcontroller kits for building digital devices. You can build awesome projects. Arduino is great for programming. You can learn electronics easily</p>
+				<a href="registration.php" class="hero-btn">Kar Bismillah</a>
 			</div>
 		</div><!--service-card-->
 
 	</div>
 </section>
-
-
-<!------testimonials----->
-
-<section class="testimonials">
-
-    <h1 class="heading">CEO Message's</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-
-    <div class="row">
-       <div class="testimonials-col">
-           <img src="images/adfar.jpg" alt="">
-           <div>
-               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-               <h3>Adfar RAsheed</h3>
-           </div>
-       </div>
-       <div class="testimonials-col">
-           <img src="images/user2.jpg" alt="">
-           <div>
-               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-               <h3>Mohammad Idrees</h3>
-           </div>
-       </div>
-
-    </div>
-
-
-</section>
-
-<hr class="hrr">
 
 
 <!-- footer section starts  -->
