--- a/asli/services.html
+++ b/asli/services.html
@@ -51,21 +51,29 @@
 <!-- header section ends -->
 
 
+
+
+
+
+
 <!-- service section starts  -->
 
 <section id="service" class="service">
 
-<h1 class="heading">our services</h1>
+<h1 class="heading">Our Services</h1>
 
 <div class="row">
 
   <div class="image">
-    <img src="images/web.svg" alt="">
+    <img src="images/Web.svg" alt="">
   </div>
   <div class="content">
-    <h3>Website Development</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde voluptatem, tempore hic deserunt vel temporibus aperiam recusandae ratione, obcaecati at qui accusamus enim, laudantium eveniet. Inventore voluptas nemo placeat. Voluptas.</p>
-    <a href="#"><button class="btn">read more</button></a>
+    <h3>Programming for Kids</h3>
+    <h1>"</h1>
+    <h2>Start where you are. Use what you have. Do what you can.</h2>
+    <h1>"</h1>
+    <p>Today, in the computer age, not all schools teach coding in early childhood resulting in a major gap in the requirements of the new world and our children's skills. KashKoding introduces and prepares your kid from 6-18 years for this new coding world. Coding jobs are the future. With technology becoming all pervasive and developing at a rapid pace, coding is a skill that has become indispensable!</p>
+    <a href="enroll.html"><button class="hero-btn">Explore Our Courses</button></a>
   </div>
 
 </div>
@@ -73,39 +81,15 @@
 <div class="row">
 
   <div class="content">
-    <h3>Mobile Freindly</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde voluptatem, tempore hic deserunt vel temporibus aperiam recusandae ratione, obcaecati at qui accusamus enim, laudantium eveniet. Inventore voluptas nemo placeat. Voluptas.</p>
-    <a href="#"><button class="btn">read more</button></a>
+    <h3>Website Design and Development</h3>
+    <h1>"</h1>
+    <h2>Good websites get applause. Great websites get business.</h2>
+    <h1>"</h1>
+    <p>Don’t let your website be just another URL on the web. We can help it be a powerful marketing medium to attract prospective customers. As a website development company having created in developing creative, conversion focused websites, we are well-poised to help your business make a mark online.</p>
+    <a href="#"><button class="hero-btn">read more</button></a>
   </div>
   <div class="image">
     <img src="images/mobilef.svg" alt="">
-  </div>
-
-</div>
-
-<div class="row">
-
-  
-  <div class="image">
-    <img src="images/respon.svg" alt="">
-  </div>
-  <div class="content">
-    <h3>Responsive Design</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde voluptatem, tempore hic deserunt vel temporibus aperiam recusandae ratione, obcaecati at qui accusamus enim, laudantium eveniet. Inventore voluptas nemo placeat. Voluptas.</p>
-    <a href="#"><button class="btn">read more</button></a>
-  </div>
-
-</div>
-
-<div class="row">
-
-  <div class="content">
-    <h3>Course Certification</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde voluptatem, tempore hic deserunt vel temporibus aperiam recusandae ratione, obcaecati at qui accusamus enim, laudantium eveniet. Inventore voluptas nemo placeat. Voluptas.</p>
-    <a href="#"><button class="btn">read more</button></a>
-  </div>
-  <div class="image">
-    <img src="images/certif.svg" alt="">
   </div>
 
 </div>
@@ -115,12 +99,8 @@
 
 </section>
 
-<hr class="hrr">
-   
-<!-- service section ends -->
 
 
-<hr class="hrr">
 
 <!-- contact section starts  -->
 
