--- a/asli/enroll.html
+++ b/asli/enroll.html
@@ -160,7 +160,7 @@ Its too easy! And too user-friendly, making every other CAD or 3D program seem a
 
 <section class="contact" id="contact">
 
-<h1 class="heading">contact us</h1>
+<h1 class="heading">Contact Us</h1>
 
 <div class="row">
 
