--- a/asli/tinker.html
+++ b/asli/tinker.html
@@ -105,7 +105,7 @@
 
 <section class="contact" id="contact">
 
-<h1 class="heading">contact us</h1>
+<h1 class="heading">Contact Us</h1>
 
 <div class="row">
 
