--- a/asli/javascript.html
+++ b/asli/javascript.html
@@ -107,7 +107,7 @@
 
 <section class="contact" id="contact">
 
-<h1 class="heading">contact us</h1>
+<h1 class="heading">Contact Us</h1>
 
 <div class="row">
 
@@ -163,7 +163,7 @@
 
     </div>
 
-    <h1 class="credit">created by <a href="#">Adfar Rashid</a> all rights reserved. </h1>
+    <h1 class="credit">created by <a href="#">KashKoding</a> all rights reserved. </h1>
 
 </div>
 
