--- a/asli/enroll.html
+++ b/asli/enroll.html
@@ -216,7 +216,7 @@ Its too easy! And too user-friendly, making every other CAD or 3D program seem a
 
     </div>
 
-    <h1 class="credit">created by <a href="#">Adfar Rashid</a> all rights reserved. </h1>
+    <h1 class="credit">created by <a href="#">KashKoding</a> all rights reserved. </h1>
 
 </div>
 
