--- a/asli/team.html
+++ b/asli/team.html
@@ -202,7 +202,7 @@
 
     </div>
 
-    <h1 class="credit">created by <a href="#">Adfar Rashid</a> all rights reserved. </h1>
+    <h1 class="credit">created by <a href="#">KashKoding</a> all rights reserved. </h1>
 
 </div>
 
