--- a/asli/about.html
+++ b/asli/about.html
@@ -37,6 +37,7 @@
                  <li><a href="index.html">HOME</a></li>
                  <li><a href="about.html">ABOUT</a></li>
                  <li><a href="courses.html">COURSES</a></li>
+                 <li><a href="curriculum.html">CURRICULUM</a></li>
                  <li><a href="services.html">SERVICES</a></li>
                  <li><a href="contact.html">CONTACT</a></li>
              </ul>
@@ -53,22 +54,22 @@
     
     <hr class="hrr">
 
-<!-- about section starts  -->
-
 <section class="about" id="about">
 
     <div class="image">
-        <img src="images/about.svg" alt="">
+        <img src="images/team.svg" alt="">
     </div>
 
     <div class="content">
-        <h3>About us?</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam aperiam quaerat dolor voluptas nobis voluptates illum? Inventore voluptas dolore voluptates.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex delectus ducimus dignissimos pariatur. Amet sed distinctio earum dolorum nulla, in obcaecati aliquid modi quos magni ducimus culpa nobis laudantium incidunt.</p>
-        <a href="#"><button class="book">learn more</button></a>
+        <h3>Who are we?</h3>
+        <p>We are a team of engineers and educators who have come together to bring a change. Shift the waves. Change the paradigm. Ready the new generation for the world they are going to face. Having witnessed and suffered through the absence of tech sector in the valley, we have taken to the helm and we envision a change that will spark a chain reaction. Never shall the youth suffer because of lack of tech companies in valley, if we rise and create opportunities today.</p>
+        <p>We have a catalogue of diverse professionals from various backgrounds at our disposal. These include full-stack developers, game developers, app developers, international coding educators and engineers of computer science and electronics backgrounds. We have pledged to become the change that we want to see in our kashmir :)</p>
+        <a href="team.html"><button class="hero-btn book">Meet Our Team</button></a>
     </div>
 
 </section>
+
+<!-- about section ends -->
 
 <section class="contact" id="contact">
 
@@ -79,9 +80,9 @@
     <form action="">
         <input type="text" placeholder="full name" class="box">
         <input type="email" placeholder="your email" class="box">
-        <input type="password" placeholder="your password" class="box">
+        <input type="text" placeholder="your address" class="box">
         <input type="number" placeholder="your number" class="box">
-        <textarea name="" id="" cols="30" rows="10" class="box address" placeholder="your address"></textarea>
+        <textarea name="" id="" cols="30" rows="10" class="box address" placeholder="your message"></textarea>
         <input type="submit" class="hero-btn" value="Send now">
     </form>
 
@@ -103,20 +104,20 @@
 
         <div class="box">
             <h3>Languages we teach</h3>
-            <a href="#">Scratch</a>
-            <a href="#">thunkable</a>
-            <a href="#">HTML and CSS</a>
-            <a href="#">JavaScript</a>
-            <a href="#">Python</a>
+            <a href="Scratch.html">Scratch</a>
+            <a href="thunkable.html">thunkable</a>
+            <a href="html.html">HTML and CSS</a>
+            <a href="javascript.html">JavaScript</a>
+            <a href="python.html">Python</a>
         </div>
 
         <div class="box">
             <h3>Quick Links</h3>
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Course</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="courses.html">Course</a>
             <a href="#">Blog</a>
-            <a href="#">Contact</a>
+            <a href="contact.html">Contact</a>
         </div>
 
         <div class="box">
@@ -128,7 +129,7 @@
 
     </div>
 
-    <h1 class="credit">created by <a href="#">KashKoding</a> all rights reserved. </h1>
+    <h1 class="credit">Created by <a href="#">KashKoding</a> all rights reserved. </h1>
 
 </div>
 
