--- a/asli/courses.html
+++ b/asli/courses.html
@@ -37,6 +37,7 @@
                  <li><a href="index.html">HOME</a></li>
                  <li><a href="about.html">ABOUT</a></li>
                  <li><a href="courses.html">COURSES</a></li>
+				 <li><a href="curriculum.html">CURRICULUM</a></li>
                  <li><a href="services.html">SERVICES</a></li>
                  <li><a href="contact.html">CONTACT</a></li>
              </ul>
@@ -191,7 +192,7 @@
 
     </div>
 
-    <h1 class="credit">created by <a href="#">KashKoding</a> all rights reserved. </h1>
+    <h1 class="credit">Created by <a href="#">KashKoding</a> all rights reserved. </h1>
 
 </div>
 
