--- a/asli/index.html
+++ b/asli/index.html
@@ -39,6 +39,7 @@
                  <li><a href="index.html">HOME</a></li>
                  <li><a href="about.html">ABOUT</a></li>
                  <li><a href="courses.html">COURSES</a></li>
+                 <li><a href="curriculum.html">CURRICULUM</a></li>
                  <li><a href="services.html">SERVICES</a></li>
                  <li><a href="contact.html">CONTACT</a></li>
              </ul>
@@ -75,7 +76,7 @@
 <!------Call to Action---->
 
 <section class="cta">
-       <h1>Enroll for Our various courses <br> from anywhere in Kashmir.</h1>
+       <h1>Enroll your kids for our various <br> courses from anywhere in Kashmir.</h1>
        <a href="enroll.html" class="hero-btn">Enroll NOW</a>
 
 
@@ -260,21 +261,21 @@
     <div class="box-container">
 
         <div class="box">
-           <h3>Languages we teach</h3>
-            <a href="#">Scratch</a>
-            <a href="#">thunkable</a>
-            <a href="#">HTML and CSS</a>
-            <a href="#">JavaScript</a>
-            <a href="#">Python</a>
+            <h3>Languages we teach</h3>
+            <a href="Scratch.html">Scratch</a>
+            <a href="thunkable.html">thunkable</a>
+            <a href="html.html">HTML and CSS</a>
+            <a href="javascript.html">JavaScript</a>
+            <a href="python.html">Python</a>
         </div>
 
         <div class="box">
             <h3>Quick Links</h3>
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Course</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="courses.html">Course</a>
             <a href="#">Blog</a>
-            <a href="#">Contact</a>
+            <a href="contact.html">Contact</a>
         </div>
 
         <div class="box">
@@ -286,7 +287,7 @@
 
     </div>
 
-    <h1 class="credit">created by <a href="#">KashKoding</a> all rights reserved. </h1>
+    <h1 class="credit">Created by <a href="#">KashKoding</a> all rights reserved. </h1>
 
 </div>
 
