--- a/asli/html.html
+++ b/asli/html.html
@@ -37,6 +37,7 @@
                  <li><a href="index.html">HOME</a></li>
                  <li><a href="about.html">ABOUT</a></li>
                  <li><a href="courses.html">COURSES</a></li>
+                 <li><a href="curriculum.html">CURRICULUM</a></li>
                  <li><a href="services.html">SERVICES</a></li>
                  <li><a href="contact.html">CONTACT</a></li>
              </ul>
@@ -110,12 +111,12 @@
 
 <div class="row">
 
-    <form action="">
+   <form action="">
         <input type="text" placeholder="full name" class="box">
         <input type="email" placeholder="your email" class="box">
-        <input type="password" placeholder="your password" class="box">
+        <input type="text" placeholder="your address" class="box">
         <input type="number" placeholder="your number" class="box">
-        <textarea name="" id="" cols="30" rows="10" class="box address" placeholder="your address"></textarea>
+        <textarea name="" id="" cols="30" rows="10" class="box address" placeholder="your message"></textarea>
         <input type="submit" class="hero-btn" value="Send now">
     </form>
 
@@ -137,20 +138,20 @@
 
         <div class="box">
             <h3>Languages we teach</h3>
-            <a href="#">Scratch</a>
-            <a href="#">thunkable</a>
-            <a href="#">HTML and CSS</a>
-            <a href="#">JavaScript</a>
-            <a href="#">Python</a>
+            <a href="Scratch.html">Scratch</a>
+            <a href="thunkable.html">thunkable</a>
+            <a href="html.html">HTML and CSS</a>
+            <a href="javascript.html">JavaScript</a>
+            <a href="python.html">Python</a>
         </div>
 
         <div class="box">
             <h3>Quick Links</h3>
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Course</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="courses.html">Course</a>
             <a href="#">Blog</a>
-            <a href="#">Contact</a>
+            <a href="contact.html">Contact</a>
         </div>
 
         <div class="box">
@@ -162,7 +163,7 @@
 
     </div>
 
-    <h1 class="credit">created by <a href="#">KashKoding</a> all rights reserved. </h1>
+    <h1 class="credit">Created by <a href="#">KashKoding</a> all rights reserved. </h1>
 
 </div>
 
